--- a/rest-template-demo/pom.xml
+++ b/rest-template-demo/pom.xml
@@ -47,6 +47,11 @@
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-stdlib</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents.client5</groupId>
+      <artifactId>httpclient5</artifactId>
+      <version>5.3.1</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
